--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@
     <!-- Navigation -->
     <nav class="fixed top-0 w-full bg-slate-900/80 backdrop-blur-xl z-50 border-b border-white/5">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
-            <a href="index.html" class="brand-font font-bold text-xl tracking-tight text-blue-400">Swapneel Das.</a>
+            <a href="https://swapneel.bro.bd" class="brand-font font-bold text-xl tracking-tight text-blue-400">Swapneel Das.</a>
             <div class="flex space-x-6 font-medium text-slate-400">
                 <a href="index.html" class="hover:text-white transition-colors">Portfolio</a>
-                <a href="blog.html" class="hover:text-white transition-colors">Blog</a>
                 <a href="#" class="text-white border-b-2 border-blue-500">Study</a>
             </div>
         </div>
